Removed Vigour from sleeping